# WinTools

./: .gitignore  README.md  main.py  pyproject.toml  updater.py
.github/: release-template.md
.github/workflows/: release.yml
data/: dir_size_history.db  dir_size_history.jsonl
docs/: 发布说明.md  设计文档.md  进度跟踪.md
modules/dir_size/: core.py  storage.py  ui.py
modules/large_files/: __init__.py  core.py  ui.py
modules/password_vault/: __init__.py  core.py  ui.py
scripts/: build.ps1
wintools/: __init__.py  app.py  base.py  module_registry.py
wintools/updater/: __init__.py  runner.py  service.py
